[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scenes/level_selection.gd" type="Script" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://assets/fase_selecao/fase_2_selecao.png" type="Texture" id=3]
[ext_resource path="res://assets/fase_selecao/fase_1_selecao.png" type="Texture" id=4]
[ext_resource path="res://assets/fase_selecao/fase_3_selecao.png" type="Texture" id=5]

[node name="LevelSelectionScene" type="Node2D"]
position = Vector2( 0.793701, 91.2756 )
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 160, 0 )
texture = ExtResource( 2 )

[node name="level_btn_1" type="Button" parent="."]
margin_left = -7.31811
margin_top = -61.4598
margin_right = 116.682
margin_bottom = 62.5402
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 62, 62 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_btn_2" type="Button" parent="."]
margin_left = 95.1788
margin_top = -60.904
margin_right = 219.179
margin_bottom = 63.0962
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 62, 62 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_btn_3" type="Button" parent="."]
margin_left = 201.146
margin_top = -61.7262
margin_right = 325.146
margin_bottom = 62.2745
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 62, 62 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_preview_level" type="Button" parent="."]
margin_left = -97.0701
margin_top = -56.2597
margin_right = -85.0701
margin_bottom = -36.2597
rect_pivot_offset = Vector2( 6, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_next_level" type="Button" parent="."]
margin_left = -95.2758
margin_top = -21.9601
margin_right = -83.2758
margin_bottom = -1.9601
rect_pivot_offset = Vector2( 6, 10 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="level_btn_1" to="." method="_on_level_btn_1_pressed"]
[connection signal="pressed" from="btn_preview_level" to="." method="_on_btn_preview_level_pressed"]
[connection signal="pressed" from="btn_next_level" to="." method="_on_btn_next_level_pressed"]
